--- a/public/sass/_responsive.scss
+++ b/public/sass/_responsive.scss
@@ -545,6 +545,23 @@ margin-bottom: 30px;
   margin-bottom: 0 !important;
   padding-bottom: 0!important;
 }
+.its-newsletter-grids .elementor-widget-wrap .newsletter-download .elementor-icon-box-wrapper {
+  width: 100% !important;
+  display: flex;
+  flex-wrap: wrap;
+}
+.its-newsletter-grids .elementor-widget-wrap .newsletter-download {
+  width: 100% !important;
+}
+
+.its-newsletter-grids .elementor-widget-wrap .newsletter-download .elementor-icon-box-wrapper .elementor-icon-box-icon {
+  order: 2;
+  width: 100%;
+  margin-bottom: 0;
+}
+.its-newsletter-grids .elementor-widget-wrap .newsletter-download .elementor-icon-box-wrapper .elementor-icon-box-content {
+  order: 1;
+}
 
 }
 
